Fix bg image on small phone heights

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -31,7 +31,7 @@ html {
     margin: 0px;
     .bg {
       background: url('../assets/img/bg.jpg');
-      height: 130%;
+      height: 240%;
       width: 100%;
       opacity: .1;
       z-index: -999;
